syntax = "proto3";

option go_package = "github.com/XWS-tim24/Common/common/rating_service";

package rating_service;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service RatingService{
  rpc CreateHostRating(CreateHostRatingRequest) returns(CreateHostRatingResponse) {
    option (google.api.http) = {
      post: "/hostRating"
      body: "hostRating"
    };
  }
  rpc CreateAccommodationRating(CreateAccommodationRatingRequest) returns(CreateAccommodationRatingResponse) {
    option (google.api.http) = {
      post: "/accommodationRating"
      body: "accommodationRating"
    };
  }

  rpc UpdateHostRating(DatiGaDam) returns(EmptyMessage) {
    option (google.api.http) = {
      put: "/hostRating"
      body: "updateRatingRequest"
    };
  }
  rpc UpdateAccommodationRating(DatiGaDam) returns(EmptyMessage) {
    option (google.api.http) = {
      put: "/accommodationRating"
      body: "updateRatingRequest"
    };
  }


  rpc GetUserHostRatings(EmptyMessage) returns(GetUserHostRatingsResponse) {
    option (google.api.http) = {
      get: "/hostRating"
    };
  }

  rpc GetUserAccommodationRatings(EmptyMessage) returns(GetUserAccommodationRatingsResponse) {
    option (google.api.http) = {
      get: "/accommodationRating"
    };
  }

  rpc IsHostMarked(MarkedHostRequest) returns(MarkedHostResponse) {
    option (google.api.http) = {
      get: "/isHostMarked"
    };
  }
  rpc CreateMarkedHost(MarkedHostRequest) returns(MarkedHost) {
    option (google.api.http) = {
      post: "/isHostMarked"
      body: "hostId"
    };
  }
}

message EmptyMessage {
}
message MarkedHostRequest{
  string hostId = 1;
}
message MarkedHost{
  string id = 1;
  string hostId = 2;
}
message MarkedHostResponse{
  bool marked = 1;
}

message GetUserAccommodationRatingsResponse {
  repeated AccommodationRating accommodationRating = 1;
}
message GetUserHostRatingsResponse {
  repeated HostRating hostRating = 1;
}


message CreateHostRatingRequest{
  NewHostRating hostRating = 1;
}

message CreateAccommodationRatingRequest{
  NewAccommodationRating accommodationRating = 1;
}

message CreateHostRatingResponse{
  HostRating hostRating = 1;
}

message CreateAccommodationRatingResponse{
  AccommodationRating accommodationRating = 1;
}

message HostRating {
  string id = 1;
  string userId = 2;
  string hostId = 3;
  google.protobuf.Timestamp date = 4;
  uint32 value = 5;
}

message AccommodationRating {
  string id = 1;
  string userId = 2;
  string accommodationId = 3;
  google.protobuf.Timestamp date = 4;
  uint32 value = 5;
}

message NewHostRating {
  string userId = 1;
  string hostId = 2;
  uint32 value = 3;
}

message NewAccommodationRating {
  string userId = 1;
  string accommodationId = 2;
  uint32 value = 3;
}

message UpdateRatingRequest {
  string id = 1;
  uint32 value = 2;
}

message DatiGaDam{
    UpdateRatingRequest updateRatingRequest = 1;
}

